fixed footer container size on mobile

--- a/src/pages/components/Footer.module.css
+++ b/src/pages/components/Footer.module.css
@@ -54,6 +54,7 @@
   .container {
     top: 2rem;
     left: 1rem;
+    height: 2rem;
   }
 
   .content {
