--- a/src/pages/components/Project.module.css
+++ b/src/pages/components/Project.module.css
@@ -74,6 +74,7 @@
   font-size: 2rem;
   color: var(--secondary);
   transition: 0.3s;
+  z-index: 4;
 }
 
 .icon svg:hover {
